Added a "go ahead" command

--- a/test python.ipynb
+++ b/test python.ipynb
@@ -9,13 +9,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we are learning version control\n"
+      "we are learning version control\n",
+      "Go ahead!\n"
      ]
     }
    ],
    "source": [
-    "print(\"we are learning version control\")"
+    "print(\"we are learning version control\")\n",
+    "\n",
+    "print('Go ahead!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
