Added a further expanation of purpose in Readme and imported libraries in python notebook

--- a/test python.ipynb
+++ b/test python.ipynb
@@ -21,11 +21,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will be building machine learning model here"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import libraries\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
